--- a/common/common.scss
+++ b/common/common.scss
@@ -15,6 +15,9 @@
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
 @import "templates/components/dc-show-more";
+@import "templates/topic";
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
+
+@import "widgets/post";
