--- a/scss/widgets/post.scss
+++ b/scss/widgets/post.scss
@@ -26,7 +26,8 @@
   }
 }
 
-.dc-topic-post {
+// Make extra emphasis to overcome guest styles
+.dc-topic-post.dc-topic-post {
   @include make-container;
   background-color: $beige;
   box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
@@ -57,6 +58,7 @@
   }
 
   .topic-meta-data {
+    margin-left: 0;
     margin-bottom: $spacer * 1.75;
   }
 
