feat(embedded-posts): add aesthetics to match designs

--- a/common/common.scss
+++ b/common/common.scss
@@ -21,6 +21,7 @@
 @import "templates/list/dc-topic-card";
 
 @import "widgets/post";
+@import "widgets/embedded-posts";
 
 // Re-apply foundation styles with different variables to overwrite rules
 
