feat(post): handle repliesAbove aesthetics
within the open widget of post-article this commit will copy the same built-in approach to handle
above replies but giving the freedom to add markup, the decision of duplicate is to try to keep the
other functionality untouched

re https://github.com/debtcollective/community/issues/30

--- a/scss/widgets/embedded-posts.scss
+++ b/scss/widgets/embedded-posts.scss
@@ -17,7 +17,12 @@
   }
 }
 
-.embedded-posts.bottom {
+section.embedded-posts.top.topic-body.offset2:not(.dc-component) {
+  display: none;
+}
+
+.embedded-posts.bottom,
+.embedded-posts.top {
   .row {
     padding-bottom: 0;
 
@@ -29,9 +34,11 @@
 }
 
 .embedded-posts.embedded-posts {
-  margin: 0;
   border: 0;
+  margin: 0;
+  max-width: 100%;
   padding: 0;
+  width: auto;
 
   .topic-body {
     @include make-col-ready;
