--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,7 +2,7 @@
 $beige: #faf9f5;
 $blue: #d8f6ff;
 $gray: #2b2b2b;
-$green: #d6ffb8;
+$green: #2dcbad;
 $purple: #dac4f5;
 $red: #ff4630;
 $yellow: #ffed9c;
@@ -45,6 +45,7 @@ $light: #f8f9fa;
 $dark: #3c3c3c;
 
 $card-height: 14rem;
+$btn-action-color: $secondary;
 
 /*
   There is a set of variables on "Foundation": $small-width: 800px !default; $medium-width: 995px !default;
