refactor(topic-card): use grid system structure
The idea is to avoid manual flex manipulation and have a more descriptive expectation so the card can be re-used easily

--- a/scss/card.scss
+++ b/scss/card.scss
@@ -51,6 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-direction: row;
 
     p {
       margin: 0;
