--- a/javascripts/discourse/templates/topic.hbs
+++ b/javascripts/discourse/templates/topic.hbs
@@ -201,4 +201,16 @@
   {{#if embedQuoteButton}}
     {{quote-button quoteState=quoteState selectText=(action "selectText")}}
   {{/if}}
+  <div
+    class="{{if model.relatedMessages.length "related-messages-wrapper"}}
+
+      {{if model.suggestedTopics.length "suggested-topics-wrapper"}}"
+  >
+    {{#if model.relatedMessages.length}}
+      {{related-messages topic=model}}
+    {{/if}}
+    {{#if model.suggestedTopics.length}}
+      {{suggested-topics topic=model}}
+    {{/if}}
+  </div>
 {{/discourse-topic}}
