--- a/scss/templates/list/dc-topic-card.scss
+++ b/scss/templates/list/dc-topic-card.scss
@@ -4,3 +4,12 @@
     padding-right: 0;
   }
 }
+
+.dc-topic-small.dc-card {
+  padding-bottom: 0;
+
+  footer {
+    border-top: 0.0625rem solid $gray-300;
+    width: 100%;
+  }
+}
