--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -3,8 +3,14 @@ body {
   background: linear-gradient(180deg, #dbf8ff 0%, #fcfbf7 88.74%);
 }
 
-.dc-clamp-3 {
-  @include clamp-text();
+@for $i from 1 through 3 {
+  .dc-clamp-#{$i} {
+    @include clamp-text($i);
+  }
+
+  .dc-clamp-#{$i}-fixed {
+    @include clamp-text($i, true);
+  }
 }
 
 .h-100 {
