refactor(utils): add a place for utility classes SCSS

--- a/common/common.scss
+++ b/common/common.scss
@@ -11,6 +11,7 @@
 @import "type";
 @import "card";
 @import "pill";
+@import "utils";
 
 @import "templates/components/categories-only";
 @import "templates/components/topic-list";
