--- a/scss/templates/list/dc-topic-card.scss
+++ b/scss/templates/list/dc-topic-card.scss
@@ -7,9 +7,15 @@
 
 .dc-topic-small.dc-card {
   padding-bottom: 0;
+  height: $card-height * 0.75;
+
+  .dc-card__title {
+    font-size: $font-size-base;
+  }
 
   footer {
     border-top: 0.0625rem solid $gray-300;
+    padding: 0.625rem 0;
     width: 100%;
   }
 }
