--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -15,6 +15,7 @@ $font-family-monospace: "More Gothic Bold", Impact, sans-serif;
 $font-size-base: 1rem;
 $font-size-lg: 1rem * 1.5;
 $font-size-sm: 1rem * 0.875;
+$font-size-xs: 1rem * 0.75;
 $font-weight-light: 300;
 $font-weight-normal: 400;
 $font-weight-bold: 600;
