--- a/scss/pill.scss
+++ b/scss/pill.scss
@@ -1,7 +1,16 @@
-.dc-info-pill {
+%dc-info-pill {
   background: $gray;
   border-radius: 0.125rem;
   color: $white;
   text-transform: uppercase;
   padding: 0 0.25rem;
+}
+
+.dc-info-pill {
+  @extend %dc-info-pill;
+}
+
+.dc-info-pill-sm {
+  @extend %dc-info-pill;
+  font-size: $font-size-xs;
 }
