--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,5 +1,5 @@
 .dc-card {
-  background: #fbfbfb;
+  background: $beige;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-top: 0.25rem solid transparent;
   display: flex;
