--- a/scss/widgets/embedded-posts.scss
+++ b/scss/widgets/embedded-posts.scss
@@ -9,8 +9,8 @@
   @include make-container;
   padding-top: $spacer;
   padding-bottom: $spacer;
-  background: #fbfbfb;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  background: $beige;
+  box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
 
   & + & {
     margin-top: $spacer;
