--- a/scss/templates/components/topic-list.scss
+++ b/scss/templates/components/topic-list.scss
@@ -1,6 +1,6 @@
 // to allow overwrite .topic-list rule
 .topic-list.topic-list {
   background: none;
-  border-radius: 0px;
+  border-radius: 0;
   box-shadow: none;
 }
