fix(topic): avoid limit .topic-status-info

--- a/scss/templates/topic.scss
+++ b/scss/templates/topic.scss
@@ -3,7 +3,8 @@
   margin-top: $spacer;
 }
 
-.small-action.onscreen-post {
+.small-action.onscreen-post,
+.topic-status-info {
   max-width: 100%;
 }
 
