refactor(topic): unify buttons
apply 4px border-radius instead 10px as the design suggest because other buttons built-in by
Discourse are too small for such radius (we can iterate further if needed)

--- a/scss/button.scss
+++ b/scss/button.scss
@@ -12,7 +12,14 @@
   border-radius: $border-radius;
 }
 
-.btn-action {
+.btn-default,
+.widget-button {
+  border-radius: $border-radius;
+}
+
+.btn-action,
+.btn-primary,
+.widget-button.reply {
   @extend %action-button;
 }
 
