fix(button): avoid to trigger all properties anmations

--- a/scss/discourse/button.scss
+++ b/scss/discourse/button.scss
@@ -21,7 +21,7 @@
   line-height: $line-height-small;
   text-align: center;
   cursor: pointer;
-  transition: all 0.25s;
+  transition: background 0.25s;
   .d-icon {
     color: $icon-color;
     margin-right: 0.45em;
