--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,6 +1,6 @@
 // Colours
 $beige: #fbfbfb;
-$blue: #d8f6ff;
+$blue: #03a9f4;
 $gray: #2b2b2b;
 $green: #2dcbad;
 $purple: #dac4f5;
@@ -34,7 +34,7 @@ $grid-gutter-width: 30px;
 $container-padding-x: $grid-gutter-width / 2;
 
 $body-color: $gray;
-$body-bg: $blue;
+$body-bg: #d8f6ff;
 
 $primary: $red;
 $secondary: $green;
