feat(select-kit): add base customisation for select-kit widget

--- a/common/common.scss
+++ b/common/common.scss
@@ -24,6 +24,7 @@
 @import "widgets/post";
 @import "widgets/post-controls";
 @import "widgets/embedded-posts";
+@import "widgets/select-kit";
 
 // Re-apply foundation styles with different variables to overwrite rules
 
