--- a/common/common.scss
+++ b/common/common.scss
@@ -21,6 +21,7 @@
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
 
+@import "widgets/header";
 @import "widgets/post";
 @import "widgets/post-controls";
 @import "widgets/embedded-posts";
