fix(user): remove white background on user template

--- a/common/common.scss
+++ b/common/common.scss
@@ -17,6 +17,7 @@
 @import "templates/components/topic-list";
 @import "templates/components/dc-show-more";
 @import "templates/topic";
+@import "templates/user";
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
