fix(topic-list-item): allow to bulk select items
when using bulkSelect it triggers a click within the generated checkbox, it means we will trigger a
click on the card itself as the checkbox is within the anchor of the topic card. This commit renders
a div instead anchor when the bulk is enabled

--- a/scss/templates/list/dc-topic-card.scss
+++ b/scss/templates/list/dc-topic-card.scss
@@ -5,6 +5,17 @@
   }
 }
 
+.dc-topic-bulk-select {
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  margin: 0;
+}
+
+.dc-topic.dc-card {
+  position: relative;
+}
+
 .dc-topic-small.dc-card {
   padding-bottom: 0;
   height: $card-height * 0.75;
