refactor(header): use user-menu links only on mobile
this commit will hide notifications and inbox icon from user-menu since they are already on the
header for desktop layout

re https://github.com/debtcollective/community/issues/27

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,3 +1,19 @@
 .post-menu-row {
   padding-top: 0.5rem;
 }
+
+.menu-links-row {
+  .glyphs {
+    .user-notifications-link,
+    .user-pms-link {
+      display: block;
+    }
+  }
+}
+
+.d-header-icons {
+  #notifications,
+  #inbox {
+    display: none;
+  }
+}
