--- a/common/common.scss
+++ b/common/common.scss
@@ -28,6 +28,7 @@
 @import "widgets/embedded-posts";
 @import "widgets/select-kit";
 @import "widgets/topic-timeline";
+@import "widgets/user-menu";
 
 // Re-apply foundation styles with different variables to overwrite rules
 
