fix(topic): dividers full width and time gaps with top margin
re https://app.asana.com/0/1160587988086971/1164497105920009

--- a/scss/templates/topic.scss
+++ b/scss/templates/topic.scss
@@ -3,7 +3,11 @@
   margin-top: $spacer;
 }
 
-.small-action.onscreen-post,
+.time-gap.small-action {
+  margin-top: $spacer * 2;
+}
+
+.small-action.small-action,
 .topic-status-info {
   max-width: 100%;
 }
