--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -1,29 +1,33 @@
-{{!-- TODO: https://github.com/debtcollective/community/issues/32 --}}
+{{! TODO: https://github.com/debtcollective/community/issues/32 }}
 {{#if categories}}
-<div class="dc-categories-container">
-  <h2 class="dc-heading">{{theme-i18n "dc.categories.collectives"}}</h2>
-  <div class="dc-row">
-    {{#each categories as |c|}}
-    {{#if c.is_collective}}
-    <div class="dc-col-sm-6">
-      {{dc-category-card category=c}}
+  <div class="dc-categories-container">
+    <h2 class="dc-heading">
+      {{theme-i18n "dc.categories.collectives"}}
+    </h2>
+    <div class="dc-row">
+      {{#each categories as |c|}}
+        {{#if c.is_collective}}
+          <div class="dc-col-sm-6">
+            {{dc-category-card category=c}}
+          </div>
+        {{/if}}
+      {{/each}}
     </div>
-    {{/if}}
-    {{/each}}
   </div>
-</div>
 {{/if}}
 {{#if categories}}
-<div class="dc-categories-container">
-  <h2 class="dc-heading">{{theme-i18n "dc.categories.others"}}</h2>
-  <div class="dc-row">
-    {{#each categories as |c|}}
-    {{#unless c.is_collective}}
-    <div class="dc-col-sm-6">
-      {{dc-category-card category=c}}
+  <div class="dc-categories-container">
+    <h2 class="dc-heading">
+      {{theme-i18n "dc.categories.others"}}
+    </h2>
+    <div class="dc-row">
+      {{#each categories as |c|}}
+        {{#unless c.is_collective}}
+          <div class="dc-col-sm-6">
+            {{dc-category-card category=c}}
+          </div>
+        {{/unless}}
+      {{/each}}
     </div>
-    {{/unless}}
-    {{/each}}
   </div>
-</div>
 {{/if}}
