--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -2,8 +2,11 @@
 {{#if categories}}
   <div class="dc-categories-container">
     <h2 class="dc-heading">
-      {{theme-i18n "dc.categories.collectives"}}
+      {{theme-i18n "dc.categories.collectives.title"}}
     </h2>
+    <p>
+      {{{theme-i18n "dc.categories.collectives.description"}}}
+    </p>
     <div class="dc-row">
       {{#each categories as |c|}}
         {{#if c.is_collective}}
@@ -18,7 +21,7 @@
 {{#if categories}}
   <div class="dc-categories-container">
     <h2 class="dc-heading">
-      {{theme-i18n "dc.categories.others"}}
+      {{theme-i18n "dc.categories.others.title"}}
     </h2>
     <div class="dc-row">
       {{#each categories as |c|}}
