--- a/javascripts/discourse/templates/components/dc-hero.hbs
+++ b/javascripts/discourse/templates/components/dc-hero.hbs
@@ -17,7 +17,7 @@
     </div>
     <div class="dc-col d-none d-xl-block text-right">
       <img
-        src="https://s3-alpha-sig.figma.com/img/9aa3/261e/f4d6df52faa0d1c9a9c4736b5f49d635?Expires=1585526400&Signature=HwPtDXFNNWX1GGI21Bcp1qetSXBnW~XhfEYaSM58r2IkRGwAjrTgzJHCpTDIHzBYnRLXOnWZCq26gWrz9uZvpfYZMbvzsLcJW4EH0czEhXuYfkBNAY5FvmEatLd4uZc4g5HwQOtOE3OxujwaObKvZbycOjD7m-QhU0GYuNiHg8CkQqydYSbVNpu~JE1oa5uwinoDjLmjrQDrRfzXCidW52foRD6aF4rKnjy9BpTq7F2tjukhhN9ZZGC1Eio5Z6gi19~WOPuMdOlOd~n8oTHikjOpD4MdAjz46i1hq9id-XiMdZOOH4b9yP7-dpgHdX8TAdoo~dN8mnH4O8RJ28gIIg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+        src="{{theme-setting "theme_uploads.hero_image"}}"
         width="400px"
         height="400px"
       />
