fix(category): clamp text to be 3 lines

--- a/javascripts/discourse/templates/components/dc-category-card.hbs
+++ b/javascripts/discourse/templates/components/dc-category-card.hbs
@@ -4,7 +4,7 @@
   style="border-top-color: #{{category.color}};"
 >
   <div class="dc-card__content">
-    <h2 class="dc-card__title">
+    <h2 class="dc-card__title dc-clamp-3">
       {{category.name}}
     </h2>
     <div class="dc-card__text dc-clamp-3">
