feat(topic-list): allow to support "last-visited" discourse feature
re https://app.asana.com/0/1159164196409156/1168068725630293

--- a/common/common.scss
+++ b/common/common.scss
@@ -25,6 +25,7 @@
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
+@import "templates/list/visited-line";
 
 @import "widgets/header";
 @import "widgets/post";
