--- a/javascripts/discourse/templates/components/topic-list.hbs
+++ b/javascripts/discourse/templates/components/topic-list.hbs
@@ -24,6 +24,11 @@
               tagsForUser=tagsForUser
             }}
           </div>
+          {{raw
+            "list/visited-line"
+            lastVisitedTopic=lastVisitedTopic
+            topic=topic
+          }}
         {{/if}}
       {{/each}}
     </div>
