fix(header): use 'with-user' to change items order
this will avoid the custom nav links injected by third parties to be missplaced

--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -17,6 +17,10 @@
   margin: 0 0 0 0.5rem;
 }
 
+.d-header.with-user .header-buttons {
+  order: 2;
+}
+
 .d-header-icons {
   align-items: center;
   display: flex;
