refactor(topic-card): adjust height of "small" version

--- a/scss/templates/list/dc-topic-card.scss
+++ b/scss/templates/list/dc-topic-card.scss
@@ -18,7 +18,7 @@
 
 .dc-topic-small.dc-card {
   padding-bottom: 0;
-  height: $card-height * 0.75;
+  height: 10.5rem;
 
   .dc-card__title {
     font-size: $font-size-base;
