--- a/scss/templates/list/dc-topic-card.scss
+++ b/scss/templates/list/dc-topic-card.scss
@@ -30,3 +30,11 @@
     width: 100%;
   }
 }
+
+.has-excerpt .dc-topic.dc-card {
+  height: 15rem;
+
+  .dc-card__text {
+    margin-top: $spacer * 0.75;
+  }
+}
