--- a/javascripts/discourse/templates/components/dc-show-more.hbs
+++ b/javascripts/discourse/templates/components/dc-show-more.hbs
@@ -1,6 +1,6 @@
 {{yield}}
 {{#if displayButton}}
   <button class="btn-show-more" {{on "click" this.toggleExpanded}}>
-    {{displayText}}
+    {{theme-i18n "dc.show_more.collapsed"}}
   </button>
 {{/if}}
