--- a/javascripts/discourse/templates/components/dc-topic-list-item-small.hbs
+++ b/javascripts/discourse/templates/components/dc-topic-list-item-small.hbs
@@ -4,7 +4,7 @@
       <div class="dc-card__content justify-content-around text-center h-100">
         {{raw "list/dc-topic-author" posters=topic.featuredUsers}}
         <h2 class="dc-card__title dc-clamp-2-fixed">
-          {{topic.fancyTitle}}
+          {{{topic.fancyTitle}}}
         </h2>
       </div>
     </div>
