--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -1,5 +1,4 @@
-{{! TODO: https://github.com/debtcollective/community/issues/32 }}
-{{#if categories}}
+{{#if collectives}}
   <div class="dc-categories-container">
     <h2 class="dc-heading">
       {{theme-i18n "dc.categories.collectives.title"}}
@@ -8,28 +7,24 @@
       {{{theme-i18n "dc.categories.collectives.description"}}}
     </p>
     <div class="dc-row">
-      {{#each categories as |c|}}
-        {{#if c.is_collective}}
-          <div class="dc-col-sm-6">
-            {{dc-category-card category=c}}
-          </div>
-        {{/if}}
+      {{#each collectives as |c|}}
+        <div class="dc-col-sm-6">
+          {{dc-category-card category=c}}
+        </div>
       {{/each}}
     </div>
   </div>
 {{/if}}
-{{#if categories}}
+{{#if nonCollectives}}
   <div class="dc-categories-container">
     <h2 class="dc-heading">
       {{theme-i18n "dc.categories.others.title"}}
     </h2>
     <div class="dc-row">
-      {{#each categories as |c|}}
-        {{#unless c.is_collective}}
-          <div class="dc-col-sm-6">
-            {{dc-category-card category=c}}
-          </div>
-        {{/unless}}
+      {{#each nonCollectives as |c|}}
+        <div class="dc-col-sm-6">
+          {{dc-category-card category=c}}
+        </div>
       {{/each}}
     </div>
   </div>
