feat(categories-and-latest): inject topics
As this template is used with latest topics we took those and handover to our categories-only
template, nevertheless, we need to make sure this topic list contains all the topics

--- a/javascripts/discourse/templates/components/categories-and-latest-topics.hbs
+++ b/javascripts/discourse/templates/components/categories-and-latest-topics.hbs
@@ -1,4 +1,4 @@
-{{!-- https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/components/categories-and-latest-topics.hbs --}}
-<div class='column categories'>
-  {{categories-only categories=categories}}
+{{! https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/components/categories-and-latest-topics.hbs }}
+<div class="column categories">
+  {{categories-only categories=categories topics=topics}}
 </div>
