--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -1,3 +1,20 @@
+{{#if currentEfforts}}
+  <div class="dc-categories-container">
+    <h2 class="dc-heading">
+      {{theme-i18n "dc.categories.currentEfforts.title"}}
+    </h2>
+    <p>
+      {{{theme-i18n "dc.categories.currentEfforts.description"}}}
+    </p>
+    <div class="dc-row">
+      {{#each currentEfforts as |t|}}
+        <div class="dc-col-sm-4">
+          {{dc-topic-list-item-small topic=t}}
+        </div>
+      {{/each}}
+    </div>
+  </div>
+{{/if}}
 {{#if collectives}}
   <div class="dc-categories-container">
     <h2 class="dc-heading">
