fix(current-efforts): move flag up to avoid run method
the idea is to skip any code regarding current efforts if the setting is set to false

--- a/javascripts/discourse/templates/mobile/components/categories-only.hbs
+++ b/javascripts/discourse/templates/mobile/components/categories-only.hbs
@@ -1,6 +1,10 @@
 {{! https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/mobile/components/categories-only.hbs }}
-{{dc-categories-only
-  nonCollectives=nonCollectives
-  collectives=collectives
-  currentEfforts=currentEfforts
-}}
+{{#if themeSettings.show_current_efforts}}
+  {{dc-categories-only
+    nonCollectives=nonCollectives
+    collectives=collectives
+    currentEfforts=currentEfforts
+  }}
+{{else}}
+  {{dc-categories-only nonCollectives=nonCollectives collectives=collectives}}
+{{/if}}
