--- a/javascripts/discourse/templates/components/dc-category-card.hbs
+++ b/javascripts/discourse/templates/components/dc-category-card.hbs
@@ -20,7 +20,7 @@
     <p class="m-0 ml-1 dc-text-light">
       {{category.totalTopicCount}}
     </p>
-    {{#if category.is_collective}}
+    {{#if category.tdc_is_collective}}
       <span class="ml-2 material-icons">
         supervisor_account
       </span>
