feat(navigation): customize category nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -17,8 +17,10 @@
 @import "connectors/hero";
 
 @import "templates/components/categories-only";
+@import "templates/components/d-navigation";
 @import "templates/components/dc-show-more";
 @import "templates/components/list-controls";
+@import "templates/components/navigation-bar";
 @import "templates/components/topic-list";
 @import "templates/composer";
 @import "templates/topic";
